<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/black"
    >

    <TextView
        android:id="@+id/tvinput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/black"
        android:gravity="end|bottom"
        android:padding="10dp"
        android:text="@string/cal_text"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_weight="1"
        >

        <Button
            android:id="@+id/btnclear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/btncolor"
            android:onClick="onClear"
            android:text="@string/c"
            android:textSize="40sp"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btndel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:backgroundTint="@color/btncolor"
            android:onClick="onBack"
            android:text="@string/del"
            android:textSize="25sp"

            />

        <Button
            android:id="@+id/btnmodulo"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/division"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            />
        <Button
            android:id="@+id/btndivision"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onoperator"
            android:textAlignment="center"
            android:text="@string/Division"
            android:textSize="40sp"
            android:backgroundTint="@color/btnyellow"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnseven"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btneight"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_8"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"

            />
        <Button
            android:id="@+id/btnnine"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_9"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            />
        <Button
            android:id="@+id/btnmultiply"
            android:textColor="@color/white"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onoperator"
            android:textAlignment="center"
            android:text="@string/Multiply"
            android:textSize="40sp"
            android:backgroundTint="@color/btnyellow"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnfour"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btnfive"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_5"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"

            />
        <Button
            android:id="@+id/btnsix"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_6"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            />
        <Button
            android:id="@+id/btnmnius"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onoperator"
            android:textAlignment="center"
            android:text="@string/Minus"
            android:textSize="40sp"
            android:backgroundTint="@color/btnyellow"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnone"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />
        <Button
            android:id="@+id/btntwo"
            android:layout_margin="2dp"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_2"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"

            />
        <Button
            android:id="@+id/btnthree"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDigit"
            android:text="@string/_3"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            />
        <Button
            android:id="@+id/btnplus"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onoperator"
            android:textAlignment="center"
            android:text="@string/Addition"
            android:textSize="40sp"
            android:backgroundTint="@color/btnyellow"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/black"
        android:layout_gravity="bottom"
        android:layout_weight="1">
        <Button
            android:id="@+id/btnzero"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:text="@string/_0"
            android:textSize="40sp"
            android:backgroundTint="@color/btncolor"
            android:onClick="onDigit"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/btndot"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ondecimal"
            android:text="@string/dot"
            android:textSize="25sp"
            android:backgroundTint="@color/btncolor"
            />
        <Button
            android:id="@+id/btnequal"
            android:layout_margin="2dp"
            android:textColor="@color/white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/equal"
            android:textSize="40sp"
            android:backgroundTint="@color/btnyellow"
            />
    </LinearLayout>

</LinearLayout>